# cryptohash-sha1

./: cabal.project  cryptohash-sha1.cabal
src/Crypto/Hash/: SHA1.hs
